p7/tests/t089.gpl
rectangle my_rectangle(x = 100, y = 100);

on akey
{
    my_rectangle += 42;
}
